background color change, new loading swiper style, html, css refactoring, youtube html5 only, loading optimization

--- a/app/index.html
+++ b/app/index.html
@@ -65,19 +65,19 @@
   <meta name="msapplication-TileImage"
         content="images/touch/ms-touch-icon-144x144-precomposed.png"/>
   <meta name="msapplication-TileColor"
-        content="#1f1f1f"/>
+        content="#16161d"/>
   <!-- Fallback for Safari on iOS -->
   <meta name="apple-mobile-web-app-capable"
         content="yes"/>
   <meta name="apple-mobile-web-app-status-bar-style"
-        content="#1f1f1f"/>
+        content="#16161d"/>
   <meta name="apple-mobile-web-app-title"
         content="goto Interactive"/>
   <link rel="apple-touch-icon"
         href="images/touch/apple-touch-icon.png"/>
   <!-- Fallback color the status bar on mobile devices -->
   <meta name="theme-color"
-        content="#1f1f1f"/>
+        content="#16161d"/>
   <!-- /Manifest -->
 
   <link rel="canonical"
@@ -103,12 +103,12 @@
           "@type": "Person",
           "name": "Denis Baskovsky"
         }],
-        "url": "https://www.gotointeractive.com",
+        "url": "https://gotointeractive.com",
         "sameAs": [
-          "https://twitter.com/tewstindie",
-          "https://plus.google.com/115508272748009352854",
           "https://github.com/tewst",
-          "https://trello.com/gotointeractive"
+          "https://twitter.com/tewstindie",
+          "https://trello.com/gotointeractive",
+          "https://plus.google.com/115508272748009352854"
         ]
       }
   </script>
@@ -164,7 +164,7 @@
              tabindex="-1"
              target="_blank">
             <img src="images/vendors/kongregate.png"
-                 alt="Play on Kongregate">
+                 alt="Play on Kongregate"/>
           </a>
 
           <a href="//github.com/tewst/Arkahold"
@@ -172,7 +172,7 @@
              tabindex="-1"
              target="_blank">
             <img src="images/vendors/GitHub_Logo.png"
-                 alt="">
+                 alt=""/>
           </a>
 
         </section>
@@ -190,17 +190,20 @@
             <div class="swiper-slide">
               <img data-src="./images/pic/arkahold/01.png"
                    alt=""
-                   class="full-image-cover fill-inside-content scale-up swiper-lazy">
+                   class="full-image-cover scale-up swiper-lazy"/>
+              <div class="loading"></div>
             </div>
             <div class="swiper-slide">
               <img data-src="./images/pic/arkahold/02.png"
                    alt=""
-                   class="full-image-cover fill-inside-content scale-up swiper-lazy">
+                   class="full-image-cover scale-up swiper-lazy"/>
+              <div class="loading"></div>
             </div>
             <div class="swiper-slide">
               <img data-src="./images/pic/arkahold/03.png"
                    alt=""
-                   class="full-image-cover fill-inside-content scale-up swiper-lazy">
+                   class="full-image-cover scale-up swiper-lazy"/>
+              <div class="loading"></div>
             </div>
           </div>
           <div class="swiper-pagination"></div>
@@ -226,7 +229,7 @@
              tabindex="-1"
              target="_blank">
             <img src="images/vendors/googleplay.png"
-                 alt="Get it on Google Play">
+                 alt="Get it on Google Play"/>
           </a>
         </section>
 
@@ -244,17 +247,20 @@
             <div class="swiper-slide">
               <img data-src="./images/pic/botris/01.jpg"
                    alt=""
-                   class="full-image-cover fill-inside-content scale-up swiper-lazy">
+                   class="full-image-cover scale-up swiper-lazy"/>
+              <div class="loading"></div>
             </div>
             <div class="swiper-slide">
               <img data-src="./images/pic/botris/02.jpg"
                    alt=""
-                   class="full-image-cover fill-inside-content scale-up swiper-lazy">
+                   class="full-image-cover scale-up swiper-lazy"/>
+              <div class="loading"></div>
             </div>
             <div class="swiper-slide">
               <img data-src="./images/pic/botris/03.jpg"
                    alt=""
-                   class="full-image-cover fill-inside-content scale-up swiper-lazy">
+                   class="full-image-cover scale-up swiper-lazy"/>
+              <div class="loading"></div>
             </div>
           </div>
           <div class="swiper-pagination"></div>
@@ -272,7 +278,7 @@
     <div class="content">
 
       <div class="col1">
-        <h2 class="shake-up">1or2 [Upcoming]</h2>
+        <h2 class="shake-up">1or2 (Upcoming)</h2>
         <p class="pre-line">1 or 2? Can you answer fast enough?</p>
       </div>
       <div class="col2">
@@ -281,22 +287,26 @@
             <div class="swiper-slide">
               <img data-src="./images/pic/1or2/01.png"
                    alt=""
-                   class="full-image-cover fill-inside-content scale-up swiper-lazy">
+                   class="full-image-cover scale-up swiper-lazy"/>
+              <div class="loading"></div>
             </div>
             <div class="swiper-slide">
               <img data-src="./images/pic/1or2/02.png"
                    alt=""
-                   class="full-image-cover fill-inside-content scale-up swiper-lazy">
+                   class="full-image-cover scale-up swiper-lazy"/>
+              <div class="loading"></div>
             </div>
             <div class="swiper-slide">
               <img data-src="./images/pic/1or2/03.png"
                    alt=""
-                   class="full-image-cover fill-inside-content scale-up swiper-lazy">
+                   class="full-image-cover scale-up swiper-lazy"/>
+              <div class="loading"></div>
             </div>
             <div class="swiper-slide">
               <img data-src="./images/pic/1or2/04.png"
                    alt=""
-                   class="full-image-cover fill-inside-content scale-up swiper-lazy">
+                   class="full-image-cover scale-up swiper-lazy"/>
+              <div class="loading"></div>
             </div>
           </div>
           <div class="swiper-pagination"></div>
@@ -324,15 +334,13 @@
             <img src="images/vendors/googleplay.png"
                  alt="Get it on Google Play"/>
           </a>
-
           <a href="//github.com/tewst/todo-list"
              title="Star todo-list on GitHub"
              tabindex="-1"
              target="_blank">
             <img src="images/vendors/GitHub_Logo.png"
-                 alt="">
+                 alt=""/>
           </a>
-
         </section>
 
       </div>
@@ -342,12 +350,14 @@
             <div class="swiper-slide">
               <img data-src="./images/pic/todo-list/01.png"
                    alt=""
-                   class="full-image-cover fill-inside-content scale-up swiper-lazy">
+                   class="full-image-cover scale-up swiper-lazy"/>
+              <div class="loading"></div>
             </div>
             <div class="swiper-slide">
               <img data-src="./images/pic/todo-list/02.png"
                    alt=""
-                   class="full-image-cover fill-inside-content scale-up swiper-lazy"/>
+                   class="full-image-cover scale-up swiper-lazy"/>
+              <div class="loading"></div>
             </div>
           </div>
           <div class="swiper-pagination"></div>
@@ -364,7 +374,7 @@
     <div class="content">
 
       <div class="col1">
-        <h2 class="shake-up">@ProstoDiary</h2>
+        <h2 class="shake-up">ProstoDiary</h2>
         <p class="">Daily journal Telegram Bot Day using aes-256-ctr crypto</p>
 
         <section class="buttons">
@@ -375,19 +385,16 @@
             <img src="images/vendors/telegram-bot-logo.png"
                  alt="Get it on Telegram"
                  style="float: left; border-color: transparent;"/>
-            <span style="vertical-align: middle;">Install</span>
+            <span>Install</span>
           </a>
-
           <a href="//github.com/tewst/ProstoDiary_bot"
              title="Star ProstoDiary_bot on GitHub"
              tabindex="-1"
              target="_blank">
             <img src="images/vendors/GitHub_Logo.png"
-                 alt="">
+                 alt=""/>
           </a>
-
         </section>
-
       </div>
 
       <div class="col2">
@@ -396,12 +403,14 @@
             <div class="swiper-slide">
               <img data-src="./images/pic/prosto-diary/01.png"
                    alt=""
-                   class="full-image-cover fill-inside-content scale-up swiper-lazy">
+                   class="full-image-cover scale-up swiper-lazy"/>
+              <div class="loading"></div>
             </div>
             <div class="swiper-slide">
               <img data-src="./images/pic/prosto-diary/02.png"
                    alt=""
-                   class="full-image-cover fill-inside-content scale-up swiper-lazy">
+                   class="full-image-cover scale-up swiper-lazy"/>
+              <div class="loading"></div>
             </div>
           </div>
           <div class="swiper-pagination"></div>
@@ -432,16 +441,16 @@
         <ul>
           <li><a href="//github.com/tewst/cc_spriter"
                  target="_blank">CC Spriter</a></li>
+          <li><a href="//github.com/tewst/cordova-google-oauth2"
+                 target="_blank">Cordova Google OAuth2</a></li>
+          <li><a href="//github.com/tewst/dropbox-sdk-js"
+                 target="_blank">Dropbox SDK</a></li>
           <li><a href="//github.com/tewst/cocos2d-starter-kit"
                  target="_blank">Cocos2d Starter Kit</a></li>
           <li><a href="//github.com/tewst/polymer-starter-kit"
                  target="_blank">Polymer Starter Kit</a></li>
-          <li><a href="//github.com/tewst/dropbox-sdk-js"
-                 target="_blank">Dropbox SDK</a></li>
           <li><a href="//github.com/tewst/cc_spritesheet_packer"
                  target="_blank">CC Spritesheet Packer</a></li>
-          <li><a href="//github.com/tewst/cordova-google-oauth2"
-                 target="_blank">Cordova Google OAuth2</a></li>
         </ul>
       </div>
 
@@ -454,29 +463,19 @@
            class="section subscribe">
     <div class="content">
 
-      <section class="form-container"
-               style="
-                      position: absolute;
-                      top: 0;
-                      bottom: 0;
-                      left: 0;
-                      right: 0;">
-        <form id="userSubmitForm"
-              class="fill-inside-content">
-
+      <section class="form-container">
+        <form id="userSubmitForm">
           <div class="input-container">
             <label for="userEmail">Email</label>
             <input id="userEmail"
                    type="email"
                    required
-                   placeholder="Enter Your Email"/>
+                   placeholder="Enter your email"/>
           </div>
-
           <input id="userSubmitButton"
                  title="Submit form"
                  type="submit"
                  value="Subscribe"/>
-
         </form>
       </section>
 
@@ -509,7 +508,6 @@
              href="//plus.google.com/b/115508272748009352854/communities/104117302509112828437"
              rel="nofollow"
              target="_blank">Open Dev Community</a>
-
         </section>
 
       </div>
@@ -571,6 +569,6 @@
 </body>
 </html>
 <!-- Fonts -->
-<link href="//fonts.googleapis.com/css?family=Lato|Inconsolata:700"
-      rel="stylesheet"/>
+<link rel="stylesheet"
+      href="//fonts.googleapis.com/css?family=Lato|Inconsolata:700"/>
 <!-- /Fonts -->
