--- a/app/index.html
+++ b/app/index.html
@@ -152,6 +152,7 @@
         href="images/touch/chrome-touch-icon-192x192.png"/>
   <link rel="icon"
         sizes="192x192"
+        type="image/png"
         href="images/touch/chrome-touch-icon-192x192.png"/>
   <link rel="fluid-icon"
         href="https://gotointeractive.com/images/touch/chrome-touch-icon-192x192.png"
@@ -277,7 +278,7 @@
 
 <body loading>
 
-<app />
+<app/>
 
 <!-- build:js scripts/main.min.js -->
 <script src="main.min.js"></script>
