--- a/app/amp.html
+++ b/app/amp.html
@@ -13,10 +13,10 @@
         "contactPoint": {
           "@type": "ContactPoint",
           "contactType": "customer support",
-          "email": "info@gotointeractive.com",
+          "email": "support@gotointeractive.com",
           "url": "https://gotointeractive.com/#Subscribe"
         },
-        "email": "info@gotointeractive.com",
+        "email": "support@gotointeractive.com",
         "founders": [{
           "@type": "Person",
           "name": "Denis Baskovsky"
