--- a/app/index.html
+++ b/app/index.html
@@ -56,7 +56,7 @@
   <meta name="author"
         content="goto Interactive Software"/>
   <meta name="author-corporate"
-        content="info@gotointeractive.com"/>
+        content="support@gotointeractive.com"/>
   <meta name="designer"
         content="Denis Baskovsky"/>
   <meta name="publisher"
@@ -238,10 +238,10 @@
         "contactPoint": {
           "@type": "ContactPoint",
           "contactType": "customer support",
-          "email": "info@gotointeractive.com",
+          "email": "support@gotointeractive.com",
           "url": "https://gotointeractive.com/#Subscribe"
         },
-        "email": "info@gotointeractive.com",
+        "email": "support@gotointeractive.com",
         "founders": [{
           "@type": "Person",
           "name": "Denis Baskovsky"
