amp meta updated

--- a/app/amp.html
+++ b/app/amp.html
@@ -4,7 +4,16 @@
   <meta charset="utf-8">
   <title>goto Interactive Software</title>
   <link rel="canonical" href="./index.html"/>
-  <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+  <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1"/>
+  <meta name="description"
+        content="Play Anywhere"/>
+  <meta name="keywords"
+        lang="en"
+        content="gotois, goto Interactive, play, games, application"/>
+  <meta name="author"
+        content="goto Interactive Software"/>
+  <meta name="publisher"
+        content="Denis Baskovsky"/>
   <script type="application/ld+json">
       {
         "@context": "http://schema.org",
