--- a/mobirise/mission.html
+++ b/mobirise/mission.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="assets/images/ms-touch-icon-144x144-precomposed-128x128.png" type="image/x-icon">
   <meta name="description" content="gotois: Mission">
   
-  <title>Mission</title>
+  <title>Миссия goto Interactive Software</title>
   
 <link rel="canonical" href="https://gotointeractive.com/mission.html">
  <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style>
@@ -55,7 +55,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">create your own website for free</a></section><section class="content4 mbr-section article cid-rogdWO7TIn" id="content4-u">
+<section class="engine"><a href="https://mobirise.info/q">free responsive site templates</a></section><section class="content4 mbr-section article cid-rogdWO7TIn" id="content4-u">
     
      
 
