--- a/mobirise/404.html
+++ b/mobirise/404.html
@@ -59,7 +59,7 @@ body{font-family: Roboto;}blockquote{border-color: #312a68;}.display-1{font-fami
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop own website</a></section><section class="footer4 cid-rv8BwpPxVc" id="footer2-r">
+<section class="engine"><a href="https://mobirise.info/i">site creation software</a></section><section class="footer4 cid-rv8BwpPxVc" id="footer2-r">
 
     
 
@@ -91,7 +91,7 @@ body{font-family: Roboto;}blockquote{border-color: #312a68;}.display-1{font-fami
 
             <div class="items-col mbr-col-sm-12 align-right mbr-col-md-4">
                 <h3 class="mbr-fonts-style group-title mbr-bold display-5">
-                    Новости
+                    Новости<br>
                 </h3>
                 <div class="items">
                     
