--- a/mobirise/404.html
+++ b/mobirise/404.html
@@ -63,5 +63,5 @@ body{font-family: Roboto;}blockquote{border-color: #312a68;}div[submit-success] 
 
   
   
-<section class="engine"><a href="https://mobirise.info/h">create your own web page</a></section></body>
+<section class="engine"><a href="https://mobirise.info/f">simple site maker</a></section></body>
 </html>
