--- a/mobirise/mission.html
+++ b/mobirise/mission.html
@@ -64,7 +64,7 @@ body{font-family: Roboto;}blockquote{border-color: #312a68;}div[submit-success] 
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop your own website</a></section><section class="content2 mbr-section article cid-rv8G4S4eYe" id="content2-w">
+<section class="engine"><a href="https://mobirise.info/c">web builder</a></section><section class="content2 mbr-section article cid-rv8G4S4eYe" id="content2-w">
     
      
 
@@ -99,7 +99,7 @@ body{font-family: Roboto;}blockquote{border-color: #312a68;}div[submit-success] 
     <div class="container">
         <div class="mbr-col-sm-12 align-center mbr-white">
             <p class="mbr-text mbr-fonts-style display-7">
-                Work from 2014 to now. <br>Перейти&nbsp;<a href="index.html#content18-x" class="text-white">на главную</a>&nbsp;страницу</p>
+                Work from 2014 to now. <br><a href="index.html#content18-x" class="text-white">Перейти на главную страницу</a></p>
         </div>
     </div>
 </section>
