--- a/mobirise/archive.html
+++ b/mobirise/archive.html
@@ -64,7 +64,7 @@ body{font-family: Roboto;}blockquote{border-color: #312a68;}div[submit-success] 
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">free portfolio site templates</a></section><section class="mbr-section content1 cid-rXX0omPDY8" id="content1-1k">
+<section class="engine"><a href="https://mobirise.info/f">simple web creator</a></section><section class="mbr-section content1 cid-rXX0omPDY8" id="content1-1k">
 
     
 
@@ -93,7 +93,7 @@ body{font-family: Roboto;}blockquote{border-color: #312a68;}div[submit-success] 
                 <h3 class="mbr-section-title mbr-fonts-style align-left mbr-white display-2">
                     Botris</h3>
                 <p class="mbr-fonts-style mbr-text align-left mbr-white display-7">Найди скорейшее решение пазла!<br>Тебя ждут три вида сложности, уникальная игровая механика, почти 50 уровней.<br></p>
-                <div class="mbr-section-btn align-left"><a class="btn btn-sm btn-white-outline display-4" href="https://play.google.com/store/apps/details?id=com.tewst.botris" target="_blank"><span class="fa fa-android mbr-iconfont mbr-iconfont-btn"><svg width="16" height="16" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg" fill="currentColor"><path d="M685 483q16 0 27.5-11.5t11.5-27.5-11.5-27.5-27.5-11.5-27 11.5-11 27.5 11 27.5 27 11.5zm422 0q16 0 27-11.5t11-27.5-11-27.5-27-11.5-27.5 11.5-11.5 27.5 11.5 27.5 27.5 11.5zm-812 184q42 0 72 30t30 72v430q0 43-29.5 73t-72.5 30-73-30-30-73v-430q0-42 30-72t73-30zm1060 19v666q0 46-32 78t-77 32h-75v227q0 43-30 73t-73 30-73-30-30-73v-227h-138v227q0 43-30 73t-73 30q-42 0-72-30t-30-73l-1-227h-74q-46 0-78-32t-32-78v-666h918zm-232-405q107 55 171 153.5t64 215.5h-925q0-117 64-215.5t172-153.5l-71-131q-7-13 5-20 13-6 20 6l72 132q95-42 201-42t201 42l72-132q7-12 20-6 12 7 5 20zm477 488v430q0 43-30 73t-73 30q-42 0-72-30t-30-73v-430q0-43 30-72.5t72-29.5q43 0 73 29.5t30 72.5z"></path></svg></span>Google Play</a></div>
+                <div class="mbr-section-btn align-left"><a class="btn btn-sm btn-white-outline display-4" href="https://play.google.com/store/apps/details?id=com.tewst.botris" target="_blank"><span class="fa fa-android mbr-iconfont mbr-iconfont-btn"><svg width="100%" height="100%" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg" fill="currentColor"><path d="M685 483q16 0 27.5-11.5t11.5-27.5-11.5-27.5-27.5-11.5-27 11.5-11 27.5 11 27.5 27 11.5zm422 0q16 0 27-11.5t11-27.5-11-27.5-27-11.5-27.5 11.5-11.5 27.5 11.5 27.5 27.5 11.5zm-812 184q42 0 72 30t30 72v430q0 43-29.5 73t-72.5 30-73-30-30-73v-430q0-42 30-72t73-30zm1060 19v666q0 46-32 78t-77 32h-75v227q0 43-30 73t-73 30-73-30-30-73v-227h-138v227q0 43-30 73t-73 30q-42 0-72-30t-30-73l-1-227h-74q-46 0-78-32t-32-78v-666h918zm-232-405q107 55 171 153.5t64 215.5h-925q0-117 64-215.5t172-153.5l-71-131q-7-13 5-20 13-6 20 6l72 132q95-42 201-42t201 42l72-132q7-12 20-6 12 7 5 20zm477 488v430q0 43-30 73t-73 30q-42 0-72-30t-30-73v-430q0-43 30-72.5t72-29.5q43 0 73 29.5t30 72.5z"></path></svg></span>Google Play</a></div>
             </div>
         </div>
     </div>
@@ -112,7 +112,7 @@ body{font-family: Roboto;}blockquote{border-color: #312a68;}div[submit-success] 
                 <h3 class="mbr-section-title mbr-fonts-style align-left mbr-white display-2">
                     Arkahold</h3>
                 <p class="mbr-fonts-style mbr-text align-left mbr-white display-7">Олдскульный минималистичный арканоид на HTML5 WebGL.<br>Десяток различных этапов, &nbsp;интересные бонусы и самобытный визуальный стиль. Присутствует поддержка нескольких типов устройств: клавиатура, мышь и геймпад.<br></p>
-                <div class="mbr-section-btn align-left"><a class="btn btn-sm btn-white-outline display-4" href="https://www.kongregate.com/games/Baskovsky/arkahold" target="_blank"><span class="fa fa-gamepad mbr-iconfont mbr-iconfont-btn"><svg width="16" height="16" viewBox="0 0 2048 1792" xmlns="http://www.w3.org/2000/svg" fill="currentColor"><path d="M896 1088v-128q0-14-9-23t-23-9h-192v-192q0-14-9-23t-23-9h-128q-14 0-23 9t-9 23v192h-192q-14 0-23 9t-9 23v128q0 14 9 23t23 9h192v192q0 14 9 23t23 9h128q14 0 23-9t9-23v-192h192q14 0 23-9t9-23zm576 64q0-53-37.5-90.5t-90.5-37.5-90.5 37.5-37.5 90.5 37.5 90.5 90.5 37.5 90.5-37.5 37.5-90.5zm256-256q0-53-37.5-90.5t-90.5-37.5-90.5 37.5-37.5 90.5 37.5 90.5 90.5 37.5 90.5-37.5 37.5-90.5zm256 128q0 212-150 362t-362 150q-192 0-338-128h-220q-146 128-338 128-212 0-362-150t-150-362 150-362 362-150h896q212 0 362 150t150 362z"></path></svg></span>Play on Kongregate</a></div>
+                <div class="mbr-section-btn align-left"><a class="btn btn-sm btn-white-outline display-4" href="https://www.kongregate.com/games/Baskovsky/arkahold" target="_blank"><span class="fa fa-gamepad mbr-iconfont mbr-iconfont-btn"><svg width="100%" height="100%" viewBox="0 0 2048 1792" xmlns="http://www.w3.org/2000/svg" fill="currentColor"><path d="M896 1088v-128q0-14-9-23t-23-9h-192v-192q0-14-9-23t-23-9h-128q-14 0-23 9t-9 23v192h-192q-14 0-23 9t-9 23v128q0 14 9 23t23 9h192v192q0 14 9 23t23 9h128q14 0 23-9t9-23v-192h192q14 0 23-9t9-23zm576 64q0-53-37.5-90.5t-90.5-37.5-90.5 37.5-37.5 90.5 37.5 90.5 90.5 37.5 90.5-37.5 37.5-90.5zm256-256q0-53-37.5-90.5t-90.5-37.5-90.5 37.5-37.5 90.5 37.5 90.5 90.5 37.5 90.5-37.5 37.5-90.5zm256 128q0 212-150 362t-362 150q-192 0-338-128h-220q-146 128-338 128-212 0-362-150t-150-362 150-362 362-150h896q212 0 362 150t150 362z"></path></svg></span>Play on Kongregate</a></div>
             </div>
         </div>
     </div>
@@ -154,10 +154,9 @@ body{font-family: Roboto;}blockquote{border-color: #312a68;}div[submit-success] 
                         </amp-img>
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title mbr-fonts-style align-left mbr-light display-2">cc_spriter</h4>
-                        <p class="mbr-text mbr-fonts-style align-left display-4">Spriter skelet animation for cocos2d.js. SCON Implementation 
-                        </p>
-                        <div class="mbr-section-btn align-left"><a class="btn btn-sm btn-black-outline display-4" href="https://github.com/qertis/cc_spriter"><span class="mbrib-github mbr-iconfont mbr-iconfont-btn"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 32 32" fill="currentColor">
+                        <h4 class="card-title mbr-fonts-style align-left mbr-light display-5">cc_spriter</h4>
+                        <p class="mbr-text mbr-fonts-style align-left display-4">Имплементация скелетной анимации формата Spriter SCON для cocos2d</p>
+                        <div class="mbr-section-btn align-left"><a class="btn btn-sm btn-black-outline display-4" href="https://github.com/qertis/cc_spriter"><span class="mbrib-github mbr-iconfont mbr-iconfont-btn"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 32 32" fill="currentColor">
 
 <path d="M16 0c-8.824 0-16 7.176-16 16 0 7.724 5.52 14.132 12.812 15.626 0.56 0.106 1.16-0.368 1.188-0.94v-8.124c0.014-0.448-0.314-0.886-0.75-1-3.17-0.874-5.25-3.068-5.25-5.562 0-1.336 0.616-2.64 1.688-3.688 0.188-0.176 0.3-0.43 0.312-0.686v-3.066l3.126 1.564c0.194 0.088 0.416 0.11 0.624 0.064 1.4-0.206 3.034-0.216 4.5 0 0.208 0.046 0.43 0.024 0.626-0.064l3.124-1.56v3.060c0.010 0.26 0.124 0.512 0.312 0.688 1.072 1.048 1.688 2.352 1.688 3.688 0 2.492-2.080 4.686-5.25 5.56-0.436 0.114-0.764 0.552-0.75 1v8.128c0.026 0.57 0.626 1.044 1.188 0.94 7.292-1.498 12.812-7.908 12.812-15.632 0-8.824-7.176-16-16-16zM16 2c7.744 0 14 6.256 14 14 0 6.324-4.25 11.51-10 13.25v-6.19c3.37-1.224 6-3.746 6-7.060 0-1.78-0.83-3.394-2-4.688v-4.312c0.026-0.688-0.82-1.24-1.44-0.94l-4.37 2.13c-1.3-0.26-3.12-0.22-4.376 0l-4.374-2.13c-0.62-0.3-1.466 0.252-1.44 0.94v4.312c-1.17 1.294-2 2.908-2 4.688 0 3.314 2.63 5.836 6 7.060v1.19c-0.612 0.314-0.904 0.376-1.188 0.376-1.152 0-0.98-2.626-3.812-2.626-1.304 0-1.308 2 0 2 1.54 0 1.488 2.612 3.5 2.634 0.48 0.004 0.97-0.028 1.5-0.196v2.81c-5.75-1.738-10-6.924-10-13.248 0-7.744 6.256-14 14-14z"></path>
 </svg></span>GitHub</a></div>
@@ -179,12 +178,11 @@ body{font-family: Roboto;}blockquote{border-color: #312a68;}div[submit-success] 
                         </amp-img>
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title mbr-fonts-style align-left mbr-light display-2">
+                        <h4 class="card-title mbr-fonts-style align-left mbr-light display-5">
                             cordova-google-oauth2
                         </h4>
-                        <p class="mbr-text mbr-fonts-style align-left display-4">
-                            Cordova Google OAuth2 JS.</p>
-                        <div class="mbr-section-btn align-left"><a class="btn btn-sm btn-black-outline display-4" href="https://github.com/qertis/cordova-google-oauth2"><span class="mbrib-github mbr-iconfont mbr-iconfont-btn"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 32 32" fill="currentColor">
+                        <p class="mbr-text mbr-fonts-style align-left display-4">Обертка Google&nbsp;OAuth2 для Cordova</p>
+                        <div class="mbr-section-btn align-left"><a class="btn btn-sm btn-black-outline display-4" href="https://github.com/qertis/cordova-google-oauth2"><span class="mbrib-github mbr-iconfont mbr-iconfont-btn"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 32 32" fill="currentColor">
 
 <path d="M16 0c-8.824 0-16 7.176-16 16 0 7.724 5.52 14.132 12.812 15.626 0.56 0.106 1.16-0.368 1.188-0.94v-8.124c0.014-0.448-0.314-0.886-0.75-1-3.17-0.874-5.25-3.068-5.25-5.562 0-1.336 0.616-2.64 1.688-3.688 0.188-0.176 0.3-0.43 0.312-0.686v-3.066l3.126 1.564c0.194 0.088 0.416 0.11 0.624 0.064 1.4-0.206 3.034-0.216 4.5 0 0.208 0.046 0.43 0.024 0.626-0.064l3.124-1.56v3.060c0.010 0.26 0.124 0.512 0.312 0.688 1.072 1.048 1.688 2.352 1.688 3.688 0 2.492-2.080 4.686-5.25 5.56-0.436 0.114-0.764 0.552-0.75 1v8.128c0.026 0.57 0.626 1.044 1.188 0.94 7.292-1.498 12.812-7.908 12.812-15.632 0-8.824-7.176-16-16-16zM16 2c7.744 0 14 6.256 14 14 0 6.324-4.25 11.51-10 13.25v-6.19c3.37-1.224 6-3.746 6-7.060 0-1.78-0.83-3.394-2-4.688v-4.312c0.026-0.688-0.82-1.24-1.44-0.94l-4.37 2.13c-1.3-0.26-3.12-0.22-4.376 0l-4.374-2.13c-0.62-0.3-1.466 0.252-1.44 0.94v4.312c-1.17 1.294-2 2.908-2 4.688 0 3.314 2.63 5.836 6 7.060v1.19c-0.612 0.314-0.904 0.376-1.188 0.376-1.152 0-0.98-2.626-3.812-2.626-1.304 0-1.308 2 0 2 1.54 0 1.488 2.612 3.5 2.634 0.48 0.004 0.97-0.028 1.5-0.196v2.81c-5.75-1.738-10-6.924-10-13.248 0-7.744 6.256-14 14-14z"></path>
 </svg></span>
@@ -207,12 +205,11 @@ body{font-family: Roboto;}blockquote{border-color: #312a68;}div[submit-success] 
                         </amp-img>
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title mbr-fonts-style align-left mbr-light display-2">
+                        <h4 class="card-title mbr-fonts-style align-left mbr-light display-5">
                             openapi-jsonrpc-jsdoc
                         </h4>
-                        <p class="mbr-text mbr-fonts-style align-left display-4">
-                            OpenAPI 3.0 JSON-RPC 2.0 generator using JSDOC</p>
-                        <div class="mbr-section-btn align-left"><a class="btn btn-sm btn-black-outline display-4" href="https://github.com/qertis/openapi-jsonrpc-jsdoc" target="_blank"><span class="mbrib-github mbr-iconfont mbr-iconfont-btn"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 32 32" fill="currentColor">
+                        <p class="mbr-text mbr-fonts-style align-left display-4">Генератор документации OpenAPI 3.0 для JSON-RPC 2.0 посредством JSDOC</p>
+                        <div class="mbr-section-btn align-left"><a class="btn btn-sm btn-black-outline display-4" href="https://github.com/qertis/openapi-jsonrpc-jsdoc" target="_blank"><span class="mbrib-github mbr-iconfont mbr-iconfont-btn"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 32 32" fill="currentColor">
 
 <path d="M16 0c-8.824 0-16 7.176-16 16 0 7.724 5.52 14.132 12.812 15.626 0.56 0.106 1.16-0.368 1.188-0.94v-8.124c0.014-0.448-0.314-0.886-0.75-1-3.17-0.874-5.25-3.068-5.25-5.562 0-1.336 0.616-2.64 1.688-3.688 0.188-0.176 0.3-0.43 0.312-0.686v-3.066l3.126 1.564c0.194 0.088 0.416 0.11 0.624 0.064 1.4-0.206 3.034-0.216 4.5 0 0.208 0.046 0.43 0.024 0.626-0.064l3.124-1.56v3.060c0.010 0.26 0.124 0.512 0.312 0.688 1.072 1.048 1.688 2.352 1.688 3.688 0 2.492-2.080 4.686-5.25 5.56-0.436 0.114-0.764 0.552-0.75 1v8.128c0.026 0.57 0.626 1.044 1.188 0.94 7.292-1.498 12.812-7.908 12.812-15.632 0-8.824-7.176-16-16-16zM16 2c7.744 0 14 6.256 14 14 0 6.324-4.25 11.51-10 13.25v-6.19c3.37-1.224 6-3.746 6-7.060 0-1.78-0.83-3.394-2-4.688v-4.312c0.026-0.688-0.82-1.24-1.44-0.94l-4.37 2.13c-1.3-0.26-3.12-0.22-4.376 0l-4.374-2.13c-0.62-0.3-1.466 0.252-1.44 0.94v4.312c-1.17 1.294-2 2.908-2 4.688 0 3.314 2.63 5.836 6 7.060v1.19c-0.612 0.314-0.904 0.376-1.188 0.376-1.152 0-0.98-2.626-3.812-2.626-1.304 0-1.308 2 0 2 1.54 0 1.488 2.612 3.5 2.634 0.48 0.004 0.97-0.028 1.5-0.196v2.81c-5.75-1.738-10-6.924-10-13.248 0-7.744 6.256-14 14-14z"></path>
 </svg></span>GitHub</a></div>
