--- a/mobirise/vacancies.html
+++ b/mobirise/vacancies.html
@@ -66,16 +66,16 @@ body{font-family: Roboto;}blockquote{border-color: #312a68;}div[submit-success] 
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">free web design templates</a></section><section class="content7 mbr-section cid-rXWVrIXHey" id="content7-1h">
+<section class="engine"><a href="https://mobirise.info/m">free site design templates</a></section><section class="content7 mbr-section cid-rXWVrIXHey" id="content7-1h">
      
 
     <div class="container">
         <div class="mbr-row mbr-jc-c">
             <div class="mbr-text counter-container mbr-fonts-style mbr-col-lg-8 mbr-col-md-12 mbr-col-sm-12 display-7">
                 <ul>
-                    <li class="mbr-pb-2"><strong>UI/UX-Designer</strong> - прототипирование интерфейсов, создание анимации. <br>Стек: &nbsp;Sketch, Adobe Photoshop, Adobe Illustration, Figma</li></ul><ul>
-                    <li class="mbr-pb-2"><strong>DBA</strong> - оптимизация запросов, организация хранения данных. <br>Стек: PostgreSQL, Jena</li>
-                    <li class="mbr-pb-2"><strong>Аналитик</strong> - выявление трендов, поиск открытых/закрытых сетей, формирование целей<br>Стек: &nbsp;Google Analytics</li><li class="mbr-pb-2"><strong>Маркетолог -</strong> создание стратегий монетизации, поиск инвестиций, unit-экономика, выстраивание партнёрских программ</li><li class="mbr-pb-2"><strong>DataScience</strong> - работа с NLP, создание нейронных сетей. <br>Стек: DialogFlow, OpenCog</li><li class="mbr-pb-2"><strong>Knowledge Engineer</strong> - работа с Linked Data, выстраивание целей и семантических онтологий. <br>Стек: SPARQL, OWL, Protege</li><li class="mbr-pb-2"><strong>BackEnd Developer</strong> - создание и поддержка JSON-RPC API, написание E2E и ночных тестов. <br>Стек: Node.js, Google Cloud</li>
+                    <li class="mbr-pb-2"><strong>UI/UX-Designer</strong><br>Задачи: прототипирование интерфейсов, создание анимации. <br>Стек: &nbsp;Sketch, Adobe Photoshop, Adobe Illustration, Figma</li></ul><ul>
+                    <li class="mbr-pb-2"><strong>DBA<br></strong>Задачи: оптимизация запросов, организация хранения данных. <br>Стек: PostgreSQL, Jena</li>
+                    <li class="mbr-pb-2"><strong>Аналитик<br></strong>Задачи: выявление трендов, поиск открытых/закрытых сетей, формирование целей<br>Стек: &nbsp;Google Analytics</li><li class="mbr-pb-2"><strong>Маркетолог</strong><br>Задачи: создание стратегий монетизации, поиск инвестиций, unit-экономика, выстраивание партнёрских программ</li><li class="mbr-pb-2"><strong>DataScience</strong><br>Задачи: работа с NLP, создание нейронных сетей. <br>Стек: DialogFlow, OpenCog</li><li class="mbr-pb-2"><strong>Knowledge Engineer<br></strong>Задачи: выстраивание целей и семантических онтологий Linked Data. <br>Стек: SPARQL, OWL, Protege</li><li class="mbr-pb-2"><strong>BackEnd Developer<br></strong>Задачи: создание и поддержка API, написание E2E и ночных тестов. <br>Стек: Node.js, Google Cloud</li>
                 </ul>
             </div>
         </div>
@@ -136,7 +136,7 @@ body{font-family: Roboto;}blockquote{border-color: #312a68;}div[submit-success] 
 
         <div class="mbr-row mbr-jc-c mbr-pt-4">
             <div class="mbr-col-lg-7 mbr-col-md-10 mbr-col-sm-12" data-form-type="formoid">
-                <form class="mbr-form" method="post" target="_top" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="YcITSdrGSgJvYA3wAddkiBFX6pGW3C6bGv7NjsxYPmcWzFIFvPFfnB/QIn07rY6AcEFjSyr0QgU0eV/mOByo9/77NHMVPTqnzUMgW5Z7/iz9n3VVkzKwjwBTSjvrealC">
+                <form class="mbr-form" method="post" target="_top" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="cMJIW7nyZ0pwM0YTL1xYXjiNGS8C9QxMCSuoAolQo/HSUc+tCDQRhTVpXLNYMJcvzkZiZ5mZTr5JCR2GIAgFnBWZrX+YeIzUk2YwVwEHor4AA1xkEPi9cxEZhMdY3rn1">
                     <div class="mbr-form-row">
                       <div submit-success="" class="mbr-col-sm-12 mbr-col-md-12">
                           <template data-form-alert="" type="amp-mustache">Subscription successful!</template>
