--- a/mobirise/404.html
+++ b/mobirise/404.html
@@ -60,7 +60,7 @@ body{font-family: Roboto;}blockquote{border-color: #312a68;}div[submit-success] 
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section class="footer1 cid-rYiukCQvz1" id="footer1-21">
+<section class="engine"><a href="https://mobirise.info/h">create your own web page for free</a></section><section class="footer1 cid-rYiukCQvz1" id="footer1-21">
 
     
 
